syntax = "proto3";

package getCaptcha;

option go_package = "./proto;getCaptcha";

service GetCaptcha {
	rpc Call(Request) returns (Response) {}
}//	request为请求，传入参数。response为响应，传出参数。


//只保留我们所需的request与response
message Request {
	string uuid = 1;
	//因为验证码是生成的，所以不需要传入
}

message Response {
	//	使用切片存储图片信息，用json序列化
	bytes img = 1;
}

//	stream使用流式的方式进行数据传输，暂时不用
//	rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}



