syntax = "proto3";

package user;

option go_package = "./proto;user";

service User {

	rpc AuthUpdate(AuthReq)returns(AuthResp){}
}

message AuthReq{
	string id_card = 1;
	string real_name = 2;
	string userName = 3;
}

message AuthResp{
	string errno = 1;
	string errmsg = 2;
}

